# tauri-mac-starter

./: .gitignore  README.md  README.zh-CN.md  eslint.config.js  implementation_plan.md  index.html  main.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.context/: active_context.md  architecture.md  decisions.md  design.md  implementation_plan.md
.github/workflows/: rust-quality.yml
scripts/: generate-ipc-types.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_profiles.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  settings.rs
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx
src/core/: config.test.ts  config.ts  ipc.generated.test.ts  ipc.generated.ts  ipc.ts
src/lib/: notifications.ts  tauri.ts
src/modules/app/: api.ts  index.ts
src/modules/settings/: api.ts  index.ts
src/stores/: overlay.test.ts  overlay.ts  settings-nav.test.ts  settings-nav.ts  timer.test.ts  timer.ts
src/test/: setup.ts
src/types/: index.ts
src/windows/main/: App.tsx  main.tsx
src/windows/main/components/: AboutPage.tsx  AppearancePage.tsx  GeneralPage.tsx  SettingRow.tsx  SettingSection.tsx  ShortcutsPage.tsx  Sidebar.tsx
src/windows/overlay/: App.tsx
src/windows/timer/: App.tsx  main.tsx
