[package]
name = "tauri-mac-starter"
version = "0.1.0"
description = "A production-ready Tauri v2 template for macOS desktop apps"
authors = ["xujunfa"]
edition = "2021"

[lib]
name = "tauri_mac_starter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
